Todos los colores se representan en formato #rgb y se corrige el nombre de un estilo por coherencia

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
  * Copyright (c) 2002-2004 jact
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
- * $Id: style.css,v 1.6 2004/08/18 16:19:20 jact Exp $
+ * $Id: style.css,v 1.7 2004/08/23 18:34:44 jact Exp $
  */
 
 /**
@@ -61,7 +61,7 @@ h3 {
 }
 .error {
   font-size: 18px;
-  color: red;
+  color: #f00;
 }
 .add {
   color: #f30;
@@ -73,7 +73,7 @@ h3 {
 .change {
   color: #13920d;
 }
-.note-code {
+.noteCode {
   padding: 10px;
   border: 2px solid #dc143c;
 }
