--- a/css/wizard.css
+++ b/css/wizard.css
@@ -4,7 +4,7 @@
  * Copyright (c) 2002-2004 jact
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
- * $Id: wizard.css,v 1.3 2004/08/18 16:19:20 jact Exp $
+ * $Id: wizard.css,v 1.4 2004/09/22 18:18:48 jact Exp $
  */
 
 /**
@@ -13,6 +13,7 @@
  * Contains the css styles of OpenClinic Install Wizard
  ********************************************************************
  * Author: jact <jachavar@terra.es>
+ * @since 0.5
  */
 
 body {
