--- a/css/serialz.css
+++ b/css/serialz.css
@@ -1,12 +1,15 @@
 /* CSS based in www.serialz.to site */
 
 /* Layout */
-body {
-  margin: 0;
-  padding: 0;
+html, body {
   background: #9ea985;
   color: #f5f5dc;
-  font-family: Trebuchet MS,arial,helvetica,sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Trebuchet MS", helvetica, arial, sans-serif;
   font-size: 13px;
 }
 
@@ -23,7 +26,7 @@ html>body #header {
 #header h1 {
   background: #9ea985;
   color: #fff;
-  font-size: 18pt;
+  font-size: 28px;
   text-align: left;
   font-weight: bold;
   margin-top: 0;
@@ -48,7 +51,7 @@ html>body #header {
 #tabs {
   margin: 0;
   padding: 0;
-  font-size: 10pt;
+  font-size: 14px;
   font-weight: bold;
 }
 
@@ -94,12 +97,10 @@ li#first a, li#first span {
   width: 150px;
   float: left;
   clear: left;
-  border-right: 1px solid #dce0d3;
-  border-bottom: 1px solid #dce0d3;
-  border-left: 1px solid #dce0d3;
+  border: 1px solid #dce0d3;
+  border-top: none;
   background: #bbc2a9;
   color: #f5f5dc;
-  font-size: 10pt;
 }
 
 .sideBarLogin {
@@ -118,7 +119,7 @@ li#first a, li#first span {
 }
 
 #footer {
-  padding: 1ex 4mm;
+  padding: 1ex 15px;
   margin-left: 150px;
   clear: right;
   text-align: center;
@@ -139,15 +140,12 @@ table {
 td, th, td.odd {
   padding: 3px;
   border: 1px solid #dce0d3;
-  font-size: 10pt;
-}
-
-td.odd {
-  font-size: 10pt;
+  font-size: 14px;
 }
 
 /* Links */
 #sourceForgeLinks a {
+  background: inherit;
   color: #fff;
 }
 
@@ -178,6 +176,7 @@ td.odd {
 
 a:link, a:visited {
   color: #fff;
+  background: transparent;
 }
 
 #tabs a:link, #tabs a:visited {
@@ -191,13 +190,13 @@ a:link, a:visited {
 }
 
 .even a {
-  font-size: 10pt;
+  font-size: 14px;
 }
 
 /* Form styles */
 input, textarea, select {
-  font-family: Trebuchet MS,arial,helvetica,sans-serif;
-  font-size: 10pt;
+  font-family: "Trebuchet MS", helvetica, arial, sans-serif;
+  font-size: 14px;
   border-width: 1px;
   border-color: #dce0d3;
   background: #374611;
@@ -237,6 +236,7 @@ label {
 }
 
 .error {
+  background: inherit;
   color: #fff;
   font-weight: bold;
 }
@@ -244,13 +244,13 @@ label {
 #sideBar, .even {
   background: #bbc2a9;
   color: #f5f5dc;
-  font-size: 10pt;
+  font-size: 14px;
 }
 
 #tabs a, th {
   background: #374611;
   color: #f5f5dc;
-  font-size: 10pt;
+  font-size: 14px;
   font-weight: bold;
 }
 
@@ -277,7 +277,7 @@ img {
 
 .sqlcode {
   font-family: "Courier New", Courier, monospace;
-  font-size: 10pt;
+  font-size: 13px;
   white-space: pre;
   text-align: left;
 }
