--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
  * Copyright (c) 2002-2005 jact
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
- * $Id: style.css,v 1.10 2005/02/19 12:52:28 jact Exp $
+ * $Id: style.css,v 1.11 2005/03/04 19:55:30 jact Exp $
  */
 
 /**
@@ -20,7 +20,7 @@ html {
   color: #000;
 }
 body {
-  font-family: "Trebuchet MS", verdana, helvetica, arial, sans-serif;
+  font-family: "Trebuchet MS", trebuchet, verdana, helvetica, arial, sans-serif;
   font-size: 14px;
   color: #000;
   background: #efefef;
@@ -151,6 +151,9 @@ html>body .linkList li {
 }
 #footer p {
   margin: 0;
+}
+kbd {
+  font-weight: bold;
 }
 /* -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
 #content {
