--- a/css/gazetteer_alt.css
+++ b/css/gazetteer_alt.css
@@ -1,4 +1,5 @@
 /* CSS based in Gazetteer Alternate (haran's design in oswd.org) */
+/* $Id: gazetteer_alt.css,v 1.5 2005/06/21 18:23:49 jact Exp $ */
 
 html, body {
   background: #fff;
@@ -20,11 +21,11 @@ img {
   border: none;
 }
 
-#header h1 {
+#logo {
   margin: 0;
 }
 
-#header h1 a {
+#logo a {
   color: #afafaf;
   background: transparent;
   font-family: garamond, "times new roman", times, roman, serif;
@@ -102,6 +103,12 @@ img {
   font-size: 120%;
 }
 
+#sourceForgeLinks li {
+  display: inline;
+  list-style-type: none;
+  padding-right: 8px;
+}
+
 #sourceForgeLinks a {
   color: #fff;
   background: transparent;
@@ -176,7 +183,15 @@ img {
 }
 
 #footerLinks {
+  margin: 0;
+  padding: 0;
   text-align: center;
+}
+
+#footerLinks li {
+  list-style-type: none;
+  display: inline;
+  padding: 0 4px;
 }
 
 #footer #footerLinks p {
@@ -232,7 +247,7 @@ th {
 td, th {
   padding: 3px;
   border: 1px solid #848484;
-  font-size: 71%;
+  font-size: 91%;
 }
 
 .even {
@@ -261,6 +276,24 @@ td, th {
 
 .noWrap {
   white-space: nowrap;
+}
+
+/* Form styles */
+input, textarea, select {
+  border-width: 1px;
+  border-color: #dce0d3;
+  background: #000;
+  color: #fff;
+}
+
+input:focus, textarea:focus, select:focus {
+  background: #fff;
+  color: #000;
+}
+
+input[type="submit"], input[type="button"], input[type="reset"] {
+  border-width: 1px;
+  font-weight: bold;
 }
 
 label {
