--- a/css/scheme.css
+++ b/css/scheme.css
@@ -1,7 +1,8 @@
 /* Feel free and change all what you want */
+/* $Id: scheme.css,v 1.6 2005/06/21 18:23:49 jact Exp $ */
 
 /* --Layout-- */
-body {
+html, body {
   margin: 0;
   padding: 0;
   background: #fff;
@@ -20,7 +21,7 @@ html>body #header {
   height: auto;
 }
 
-#header h1 {
+#logo {
   margin: 0;
 }
 
@@ -87,6 +88,12 @@ li#first a, li#first span {
   border: 1px solid #000;
 }
 
+#sourceForgeLinks li {
+  display: inline;
+  list-style-type: none;
+  padding-left: 5px;
+}
+
 #sideBar {
   position: relative; /* IE hack */
   padding-left: 1ex;
@@ -137,6 +144,17 @@ li#first a, li#first span {
   margin-left: 150px;
   clear: right;
   text-align: center;
+}
+
+#footerLinks {
+  margin: 0;
+  padding: 0;
+}
+
+#footerLinks li {
+  list-style-type: none;
+  display: inline;
+  padding: 0 4px;
 }
 
 /* --Tables-- */
