--- a/css/wizard.css
+++ b/css/wizard.css
@@ -1,18 +1,18 @@
 /**
  * This file is part of OpenClinic
  *
- * Copyright (c) 2002-2004 jact
+ * Copyright (c) 2002-2005 jact
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
- * $Id: wizard.css,v 1.4 2004/09/22 18:18:48 jact Exp $
+ * $Id: wizard.css,v 1.5 2005/07/28 17:50:48 jact Exp $
  */
 
 /**
  * wizard.css
- ********************************************************************
+ *
  * Contains the css styles of OpenClinic Install Wizard
- ********************************************************************
- * Author: jact <jachavar@terra.es>
+ *
+ * Author: jact <jachavar@gmail.com>
  * @since 0.5
  */
 
@@ -32,20 +32,9 @@ h1 {
   font-size: 24px;
   border-bottom: 2px solid #3cb371;
   color: #fff;
-  background: #99cc32;
+  background: #99cc32 url(../images/install_software.png) center right no-repeat;
   margin: 0;
-  padding: 0;
-  height: 52px;
-}
-h1 span {
-  float: left;
-  text-align: left;
-  margin: 0;
-  padding: 10px 5px;
-}
-h1 img {
-  float: right;
-  margin: 2px 5px;
+  padding: 12px 10px;
 }
 h2 {
   clear: both;
