--- a/css/banter.css
+++ b/css/banter.css
@@ -264,7 +264,6 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 #mainZone h1, #mainZone h2, #mainZone h3, #mainZone h4, #mainZone h5 {
-  background: inherit;
   color: #b5bab5;
 }
 
@@ -338,4 +337,46 @@ hr {
 
 .left {
   text-align: left;
+}
+
+#breadCrumb {
+  margin-bottom: 0;
+}
+
+.icon {
+  margin-top: 5px;
+  padding: 10px 0 10px 45px;
+  background-position: center left;
+}
+
+.dumpIcon {
+  background: url(../images/dumps.png) no-repeat;
+}
+
+.logIcon {
+  background: url(../images/logs.png) no-repeat;
+}
+
+.configIcon {
+  background: url(../images/config_clinic.png) no-repeat;
+}
+
+.staffIcon {
+  background: url(../images/staff.png) no-repeat;
+}
+
+.themeIcon {
+  background: url(../images/themes.png) no-repeat;
+}
+
+.userIcon {
+  background: url(../images/users.png) no-repeat;
+}
+
+.patientIcon {
+  background: url(../images/patient.png) no-repeat;
+}
+
+.searchIcon {
+  background: url(../images/search.png) no-repeat;
 }
