Cambios en la cabecera del archivo (correo y nuevas normas)

--- a/css/print.css
+++ b/css/print.css
@@ -4,15 +4,15 @@
  * Copyright (c) 2002-2005 jact
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
- * $Id: print.css,v 1.2 2005/03/05 18:46:25 jact Exp $
+ * $Id: print.css,v 1.3 2005/08/03 18:01:45 jact Exp $
  */
 
 /**
  * print.css
- ********************************************************************
+ *
  * Contains the css styles of OpenClinic doc pages for print media
- ********************************************************************
- * Author: jact <jachavar@terra.es>
+ *
+ * Author: jact <jachavar@gmail.com>
  */
 
 body {
