--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,15 @@
  * Copyright (c) 2002-2005 jact
  * Licensed under the GNU GPL. For full terms see the file LICENSE.
  *
- * $Id: style.css,v 1.12 2005/03/05 11:39:03 jact Exp $
+ * $Id: style.css,v 1.13 2005/08/03 18:01:45 jact Exp $
  */
 
 /**
  * style.css
- ********************************************************************
+ *
  * Contains the css styles of OpenClinic doc pages
- ********************************************************************
- * Author: jact <jachavar@terra.es>
+ *
+ * Author: jact <jachavar@gmail.com>
  */
 
 html {
